--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,8 @@ h2 {
 .block {
     flex: 1;
     /* Equal width for each block */
-    background: white;
-    border: 1px solid #ccc;
+    background: rgb(57, 63, 75);
+    border: 1px solid rgb(75, 84, 74);
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -100,17 +100,9 @@ body {
     display: flex;
     justify-content: center;
     /* Center the main graph */
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
-/* Chart styling */
-.chart {
-    border: 2px solid white;
-    background-color: #222;
-    /* Dark background for charts */
-    width: 300px;
-    height: 200px;
-}
 
 /* Main graph styling */
 #graph {
